# proto_test

./: BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
app/: BUILD.bazel  main.ts
proto1/: BUILD.bazel  proto1.proto
proto2/: BUILD.bazel  proto2.proto
